fix image overlapping on main page

--- a/src/pages/main_reservation.css
+++ b/src/pages/main_reservation.css
@@ -33,11 +33,11 @@ body {
    background-color: #eee;
 }
 
-img {
+/* img {
     width: 100%;
     border-radius: 4rem;
     max-height: 100%;
-}
+} */
 
 .userlogin1 {
     text-align: right;
@@ -128,12 +128,12 @@ body {
     background-color: white;
 }
 
- img {
+ /* img {
     width: 100%;
     border-radius: 4rem;
     margin-left: -10rem;
     margin-top: 4rem;
-}
+} */
 
 .img {
     width: 600px;
